deployments/Kustomize/consul-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-api
  namespace: default
  labels:
    app: consul-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0%
  selector:
    matchLabels:
      app: consul-api
  template:
    metadata:
      labels:
        app: consul-api
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: consul-api
          image: gcr.io/golang-gin-sample/consul-api
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 2
            failureThreshold: 3
          ports:
            - containerPort: 8080
              name: app
              protocol: "TCP"
          resources:
            requests:
              cpu: "1"
              memory: "32Mi"
            limits:
              cpu: "1"
              memory: "64Mi"
      imagePullSecrets:
      - name: docker-credentials
