deployments/Kustomize/consul-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: consul-api
  namespace: default
  labels:
    app: consul-api
spec:
  rules:
  - host: consul-api.sample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-api
          servicePort: 80
